# LightWeight-SQL-database

./: BUG_REPORT.md  DASHBOARD_PROMPT.md  OPTIMIZATION_PROMT.md  PROGRESS.md  PROMPT.md  README.md  TASKS.md  pyproject.toml
dashboard/: app.js  data.js  index.html  serve.py  styles.css
scripts/: benchmark_queries.py  generate_dashboard_data.py  inspect_slt_cases.py  run_slt_stage.py
sql_db/: __init__.py  executor.py  parser.py  repl.py  sqllogictest_runner.py  storage.py  tokenizer.py
tests/: test_basic_pipeline.py  test_run_slt_stage.py  test_smoke.py  test_sqllogictest_runner.py  test_tokenizer.py
tests/sqllogictest/: current_stage.txt
